<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="member">成員</string>
    <string name="popularity_ranking">人氣排行</string>
    <string name="photo_frame">拍照圖框</string>
    <string name="support_fashion">氛圍時尚</string>
    <string name="support_popularity_list">應援人氣榜</string>

    <string name="pull_down_to_refresh">下拉重整</string>
    <string name="release_to_refresh">釋放重整</string>
    <string name="last_update">最後更新 M-d HH:mm</string>
    <string name="refreshing">正在重整…</string>
    <string name="refresh_success">重整成功</string>
    <string name="refresh_failed">重整失敗</string>

    //活動花絮
    <string name="event_highlights">活動花絮</string>
    <string name="wonderful_videos">精彩影片</string>
    <string name="flash_short_film">快閃短片</string>
    <string name="daily_vlog">日常Vlog</string>
    <string name="none_highlights">您尚未有花絮</string>

    //專屬歌曲
    <string name="exclusive_songs">專屬歌曲</string>
    <string name="none_songs">您尚未有專屬歌曲</string>
    <string name="play_now">…現在播放</string>
    <string name="album">相簿</string>
    <string name="members_wing_stars">Wing Stars 成員</string>

    //成員介紹
    <string name="member_introduction">成員介紹</string>
    <string name="none_member">您尚未有成員</string>
    <string name="support_suit">應援服</string>
    <string name="event_uniform">活動服</string>
    <string name="basic_information">基本資料</string>
    <string name="personal_schedule">個人班表</string>
    <string name="member_about_me">關於我</string>
    <string name="member_motto">想說的話</string>
    <string name="member_hobby">興趣喜好</string>
    <string name="member_basic_introduction">基本介紹</string>
    <string name="member_personal_schedule_none">日前班表尚未公布</string>

    <string-array name="rank_list">
        <item>應援人氣榜</item>
        <item>潛力新星榜</item>
        <item>星迷心動榜</item>
        <item>人氣銷售榜</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme_clothing">主題服裝</string>
    <string name="related_clothing">相關服飾</string>
    <string name="image_loading_failed">拍照圖框加載失敗</string>
    <string name="loading_success">加載完成</string>
    <string name="loading_failed">加載失敗</string>
    <string name="loading">加載中...</string>
    <string name="release_loading">釋放加載</string>
    <string name="no_record">目前沒有紀錄</string>
    <string name="no_more_data">暫無更多數據</string>
    <string name="save_successfully">保存成功</string>
    <string name="share_picture">分享圖片</string>
    <string name="ple_download_picture">請先下載圖片</string>
</resources>