<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.wingstars.base.view.TitleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/exclusive_songs" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20">

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/srl_exclusive_songs"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.scwang.smart.refresh.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srlTextFailed="@string/refresh_failed"
                app:srlTextFinish="@string/refresh_success"
                app:srlTextPulling="@string/pull_down_to_refresh"
                app:srlTextRefreshing="@string/refreshing"
                app:srlTextRelease="@string/release_to_refresh"
                app:srlTextUpdate="@string/last_update" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_exclusive_songs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>

        <LinearLayout
            android:id="@+id/ll_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_none_records" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/none_songs"
                android:textColor="@color/color_BB4D00"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/dp_30"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:src="@drawable/ic_arrow_top_pink" />
        </FrameLayout>
    </FrameLayout>
</LinearLayout>