<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.BasicInformationFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_24"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_about_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_about_me"
                android:textColor="@color/color_101828"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_about_me_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="擁有最強外掛之稱的安芝儇，不只 是Wing Stars 啦啦隊的首位正式成員，同時也是協助台鋼集團桂田文創導入韓職啦啦隊培訓系統、注入韓式應援風格的培訓指導，逐步形塑出 Wing Stars 的耀眼模型。"
                android:textColor="@color/color_6A7282"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_motto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/member_motto"
                android:textColor="@color/color_101828"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_motto_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="그럼에도 불구하고( 儘管如此，還是很美好 )"
                android:textColor="@color/color_6A7282"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_hobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/member_hobby"
                android:textColor="@color/color_101828"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_hobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="vertical"
                tools:listitem="@layout/item_hobby_list" />

            <TextView
                android:id="@+id/tv_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/member_basic_introduction"
                android:textColor="@color/color_101828"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>