<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.FashionableAtmosphereActivity">
    <com.wingstars.base.view.TitleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/support_fashion" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <RelativeLayout
                android:id="@+id/support"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/support_suit_tv"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_E2518D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_suit"/>
                <ImageView
                    android:id="@+id/support_suit_view"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fashionable_atmosphere_view"/>
            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/event"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/event_uniform_tv"
                android:layout_centerInParent="true"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_4A5565"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_uniform"/>
            <ImageView
                android:visibility="invisible"
                android:id="@+id/event_uniform_view"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fashionable_atmosphere_view"/>
        </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"/>
</LinearLayout>